--- a/config/default.json.example
+++ b/config/default.json.example
@@ -14,7 +14,7 @@
     "timeout": 30000
   },
   "mongodb": {
-    "url":"mongodb://localhost:27017/tipbot",
+    "url":"mongodb://localhost:27017/TipBot",
     "options": {
       "useMongoClient": true
     }
